Fix issue where select font size is too large on non-iOS

--- a/app/assets/stylesheets/module-form.css.scss
+++ b/app/assets/stylesheets/module-form.css.scss
@@ -25,6 +25,6 @@
 }
 
 //http://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
-select {
+.is-iOS select {
     font-size: 16px !important;
 }
